--- a/apply.html
+++ b/apply.html
@@ -105,7 +105,7 @@
 	<a href="html/main-test.html">返回上一页</a>
 	</div>
 	<div id="cap" style="display:none;"></div>
-	<div class="topfloat" style="display:none;"></div>
+	<div class="topfloat" style="none;"></div>
 	<script src="./apply_files/ext.1f549f71c429abda18.js.下载"></script>
 	<script src="./apply_files/PIMG.7fad00086048a7c3c9.js.下载"></script>
 	<script src="./apply_files/FNTS.387a84cdb8cc69baf7.js.下载"></script>
