--- a/yindao.html
+++ b/yindao.html
@@ -59,27 +59,29 @@
 	
 <body style="overflow-x:hidden;overflow-y:hidden">
 <div class="nav">
-	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
+	<div class="link5"><a href="index.html" style="font-weight: bold;">Ⅰ 首页</a>
+	</div>
+	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅱ 构图</a>
 			<ul>
 			<li><a href="yindao.html"><u>构图方法</u></a></li>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
 			<ul>
 			<li><a href="html/colourstyle.html">色调类型</a></li>
 			<li><a href="html/colourstyle-test.html">调色练习</a></li>
 			</ul>
 	</div>
 	
-	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
+	<div class="link3"><a href="html/main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
 			<ul>
 			<li><a href="html/main-test.html">理论选择题</a></li>
 			<li><a href="apply.html">综合运用</a></li>
 			</ul>
 	</div>
-	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅳ 相册</a>
+	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅴ 相册</a>
 	</div>
 </div>
 	
@@ -104,7 +106,7 @@
 		
 	<li><img id="pic"  src="image/composition/3.jpg"  alt=""></li>
 	<li id="des1">
-	<audio src="music/yindao.3gpp" controls style="width: 100%; margin-bottom: 10px;">Your browser does not support the audio element.</audio>
+	<audio src="music/yindao.mp3" controls="controls" autoplay="autoplay" style="width: 100%;">Your browser does not support the audio element.</audio>
 	<h1>引导线</h1>
 		<p >简单地说，引导线特征在于线条形状，例如道路或河流，以将观察者的眼睛吸引到照片的预期主体上。每当人们看到一幅图像时，我们的眼睛就会自然地被它内部的线条所吸引。我们本能地按照这些线条来看看它们走向何方-这些线条引领着我们对某个特定主题的注视。</p>
 	</li>
