--- a/album.html
+++ b/album.html
@@ -16,40 +16,88 @@
 	.whole{                           /*最大的div*/
 		width:1024px;
 		height:768px;
+		width: 90%;
+	    height: 96vh;
 		margin: auto;
 		background-color:black;
+		position: relative;
 	}
-	img{
+	.ab{
 		position:relative;
 		width:460px;
 		height:306px;
 }
+	
+	p{
+		text-shadow: none;
+	}
+	#tips{
+		position: absolute;
+        left:10%;
+		height:30%;
+		width:80%;
+		top:86%;
+		
+	}
+	.tip{
+		float: left;
+	}
+	#des1{
+		font-size:1.4vw;
+	    padding-top:6%;
+		padding-left:26%;
+	}
+	#des2{
+		font-size:1vw;
+		padding-top:1.5%;
+		padding-left:30%;
+		line-height: 1.3;
+		letter-spacing:3px;
+	}
+	.line{
+		height:34%;
+		width:39%;
+		background-color:black;
+		border: solid;   /*设置边框样式跟颜色*/    
+        border-width: 5px; /*设置边框宽度*/
+        border-color: #F8F1EB; 
+		margin-left:5%;
+		float: left;
+		overflow: hidden;
+	}
+	.intro{
+		font-size:30px;
+		color: white;
+		margin-top: 2%;
+	}
 	</style>
 </head>
 
 <body style="overflow-x:hidden;overflow-y:hidden">
 <div class="nav">
-	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
+	<div class="link5"><a href="index.html" style="font-weight: bold;">Ⅰ 首页</a>
+	</div>
+	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅱ 构图</a>
 			<ul>
 			<li><a href="yindao.html">构图方法</a></li>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
 			<ul>
 			<li><a href="html/colourstyle.html">色调类型</a></li>
 			<li><a href="html/colourstyle-test.html">调色练习</a></li>
 			</ul>
 	</div>
 	
-	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
+	<div class="link3"><a href="html/main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
 			<ul>
 			<li><a href="html/main-test.html">理论选择题</a></li>
 			<li><a href="apply.html">综合运用</a></li>
 			</ul>
 	</div>
-	<div class="link4"><a href="album.html" style="font-weight: bold;"><u>Ⅳ 相册</u></a>
+	<div class="link4"><a href="album.html" style="font-weight: bold;"><u>Ⅴ 相册</u></a>
 	</div>
 </div>
 <div style="text-align:center;clear:both">
@@ -59,19 +107,28 @@
 <div class="whole">
 	<div id="contentContainer" class="trans3d"> 
 	<section id="carouselContainer" class="trans3d">
-		<figure id="item1" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/8.jpg" alt=""></div></figure>
-		<figure id="item2" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/9.jpg" alt=""></div></figure>
-		<figure id="item3" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/10.jpg" alt=""></div></figure>
-		<figure id="item4" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/11.jpg" alt=""></div></figure>
-		<figure id="item5" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/12.jpg" alt=""></div></figure>
-		<figure id="item6" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/13.jpg" alt=""></div></figure>
-		<figure id="item7" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/14.jpg" alt=""></div></figure>
-		<figure id="item8" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/15.jpg" alt=""></div></figure>
-		<figure id="item9" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/16.jpg" alt=""></div></figure>
-		<figure id="item10" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/17.jpg" alt=""></div></figure>
-		<figure id="item11" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/18.jpg" alt=""></div></figure>
-		<figure id="item12" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img src="image/album/19.jpg" alt=""></div></figure>	
+		<figure id="item1" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/8.jpg" alt=""><p class="intro">港风 / 三分法</p></div></figure>
+		<figure id="item10" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/17.jpg" alt=""><p class="intro">日系 / 三分法</p></div></figure>
+		<figure id="item2" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/10.jpg" alt=""><p class="intro">港风 / 三分法</p></div></figure>
+		<figure id="item4" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/20.jpg" alt=""><p class="intro">欧美风 / 三分法</p></div></figure>
+		<figure id="item5" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/12.jpg" alt=""><p class="intro">对称法</p></div></figure>
+		<figure id="item6" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/13.jpg" alt=""><p class="intro">三分法</p></div></figure>
+		<figure id="item7" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/21.jpg" alt=""><p class="intro">欧美风 / 对角法</p></div></figure>
+		<figure id="item8" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/15.jpg" alt=""><p class="intro">日系 / 引导法</p></div></figure>
+		<figure id="item3" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/9.jpg" alt=""><p class="intro">港风 / 三分法</p></div></figure>
+		<figure id="item9" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/16.jpg" alt=""><p class="intro">日系 / 三分法</p></div></figure>
+		<figure id="item11" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/22.jpg" alt=""><p class="intro">欧美风 / 对角线法</p></div></figure>
+		<figure id="item12" class="carouselItem trans3d"><div class="carouselItemInner trans3d"><img class="ab" src="image/album/19.jpg" alt=""><p class="intro">日系 / 三分法</p></div></figure>	
 	</section>
+	</div>
+	
+	<div id="tips">
+	<div class="line">
+	<img  class="tip" src="image/t2.jpg" alt="" height="100%" ><p id="des1" >向左向右滑动，相册向左右翻转</p>
+	</div>
+	<div class="line">
+	<img class="tip" src="image/t1.jpg" alt="" height="100%"><p id="des2">从上、下分别往中间缓慢滑动<br>并将鼠标放在照片上<br>照片将放大并缓慢旋转</p>
+	</div>
 	</div>
 </div>
   <script src="album/js/libs.min.js"></script>
