--- a/duijiao.html
+++ b/duijiao.html
@@ -61,27 +61,29 @@
 			
 		</div>
 <div class="nav">
-	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
+	<div class="link5"><a href="index.html" style="font-weight: bold;">Ⅰ 首页</a>
+	</div>
+	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅱ 构图</a>
 			<ul>
 			<li><a href="yindao.html"><u>构图方法</u></a></li>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
 			<ul>
 			<li><a href="html/colourstyle.html">色调类型</a></li>
 			<li><a href="html/colourstyle-test.html">调色练习</a></li>
 			</ul>
 	</div>
 	
-	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
+	<div class="link3"><a href="html/main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
 			<ul>
 			<li><a href="html/main-test.html">理论选择题</a></li>
 			<li><a href="apply.html">综合运用</a></li>
 			</ul>
 	</div>
-	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅳ 相册</a>
+	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅴ 相册</a>
 	</div>
 </div>
 		
@@ -97,7 +99,7 @@
 	
 		
 		<li id="des1">
-		<audio src="music/duijiao.3gpp" controls style="width: 100%; margin-bottom:10px">Your browser does not support the audio element.</audio>
+		<audio src="music/duijiao.mp3" controls="controls" autoplay="autoplay" style="width: 100%;">Your browser does not support the audio element.</audio>
 		
 		<h1>对角线构图</h1>
 		<p >对角线构图其实是引导线构图的一类，将画面中的线条沿对角线方向展布，形成了对角线构图。
