--- a/html/structure-test.html
+++ b/html/structure-test.html
@@ -83,29 +83,32 @@ $(function(){
 <body style="overflow:hidden"><script src="/demos/googlegg.js"></script>
 
 <div class="nav">
-	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅰ 构图</a>
+	<div class="link5"><a href="../album.html" style="font-weight: bold;">Ⅰ 首页</a>
+	</div>
+	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅱ 构图</a>
 			<ul>
 			<li><a href="../yindao.html">构图方法</a></li>
-			<li><a href="../video/ps-structurevideo.mp4">裁剪工具</a></li>
+			<li><a href="PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="structure-test.html"><u>构图练习</u></a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
 			<ul>
 			<li><a href="colourstyle.html">色调类型</a></li>
-			<li><a href="colourstyle-test.html">调色练习</a></li>
+			<li><a href="colourstyle-test.html"><u>调色练习</u></a></li>
 			</ul>
 	</div>
 	
-	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
+	<div class="link3"><a href="main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
 			<ul>
 			<li><a href="main-test.html">理论选择题</a></li>
 			<li><a href="../apply.html">综合运用</a></li>
 			</ul>
 	</div>
-	<div class="link4"><a href="../apply.html" style="font-weight: bold;">Ⅳ 相册</a>
+	<div class="link4"><a href="../album.html" style="font-weight: bold;">Ⅴ 相册</a>
 	</div>
 </div>
+	<div class="container">
 <div class="win">
 	<div class="title">
 		<a href="javascript:;" style="color:#fff">1</a>
@@ -204,9 +207,8 @@ $(function(){
 	
 </div>
 	<input type="button" class="button button-highlight button-pill button-large" style="width:68px;height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" value="提交" id="submit">
-	<button class="answer" style="height: 40px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" >
+	<button class="answer" style="height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" >
 				 查看答案</button>
-
-
+</div>
 </body>
 </html>
