--- a/sanfen.html
+++ b/sanfen.html
@@ -61,27 +61,29 @@
 			
 		</div>
 <div class="nav">
-	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅰ 构图</a>
+	<div class="link5"><a href="index.html" style="font-weight: bold;">Ⅰ 首页</a>
+	</div>
+	<div class="link1"><a href="composition.html" style="font-weight: bold;">Ⅱ 构图</a>
 			<ul>
 			<li><a href="yindao.html"><u>构图方法</u></a></li>
 			<li><a href="html/PS-structure-video.html">裁剪工具</a></li>
 			<li><a href="html/structure-test.html">构图练习</a></li>
 			</ul>
 	</div>
-	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅱ 调色</a>
+	<div class="link2"><a href="html/colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
 			<ul>
 			<li><a href="html/colourstyle.html">色调类型</a></li>
 			<li><a href="html/colourstyle-test.html">调色练习</a></li>
 			</ul>
 	</div>
 	
-	<div class="link3"><a href="" style="font-weight: bold;">Ⅲ 测试</a>
+	<div class="link3"><a href="html/main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
 			<ul>
 			<li><a href="html/main-test.html">理论选择题</a></li>
 			<li><a href="apply.html">综合运用</a></li>
 			</ul>
 	</div>
-	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅳ 相册</a>
+	<div class="link4"><a href="album.html" style="font-weight: bold;">Ⅴ 相册</a>
 	</div>
 </div>
 <div class="container" >
@@ -95,11 +97,11 @@
 	<li><img id="pic"  src="image/composition/1.jpg"  alt=""></li>
 	
 	<li id="des1">
-	<audio src="music/sanfen.3gpp" controls style="width: 100%;">Your browser does not support the audio element.</audio>
+	<audio src="music/sanfen.mp3" controls="controls" autoplay="autoplay" style="width: 100%;">Your browser does not support the audio element.</audio>
 	<h1>三分法</h1>
 		<p id="sanfen">摄影三分法是一种在摄影、绘画、设计等艺术中经常使用的构图手段
 			<br>有时也称作<b>井字构图法</b>
-			<br>三分法要求把画面横直都分为三等分，共划分九格，画面出现两直两横的垂直及水平线，产生四个交叉点，该理论就是要求把主体安排在四个交错点上，原因是这四个交错点最易吸引目光，而且画面的垂直及水平主线（明显或暗线）都要安排在四条横直线上</p>
+			<br>三分法要求把画面横直都分为三等分，共划分九格，画面出现两直两横的垂直及水平线，产生四个交叉点，该理论就是要求把主体安排在四个交错点上，原因是这四个交错点最易吸引目光，而且画面的垂直及水平主线（明线或暗线）都要安排在四条横直线上</p>
 	</li>
 	</ul>
 	</div>
@@ -133,7 +135,7 @@ var num = 0;
 function run() {
     pre.innerText = text.slice(0,num) + (num%2==0?"":"_");
     if (++num<=text.length)
-        setTimeout(run, 60);
+        setTimeout(run, 250);
 }
 run();
 </script>
