--- a/html/colourstyle.html
+++ b/html/colourstyle.html
@@ -40,7 +40,7 @@
 </div>
 <div class="container">
 	<div class="box">
-		<img src="../imgs/01.jpg" alt="">
+		<img src="../imgs/2ed4f08a58bf9f106874f67ea07e2f3.jpg" alt="">
 		<div class="info" >
 			<a href="../japan.html" style="color:aliceblue">
 		<audio src="../music/japan.mp3" controls style="width: 90%; margin-bottom: 20px;">Your browser does not support the audio element.</audio>
