--- a/duijiao.html
+++ b/duijiao.html
@@ -22,18 +22,21 @@
 		//background-color: wheat;
 		
 	}
+	#whole{
+			margin: auto;
+		}
 	#pic{
-		width:110%;
+		width:500px;
 	}
 	#des1{
-		position: absolute;
-		top:26%;
-		left:59%;
-		width:30.6%;
-		font-size:16px;
-		color:white;
-		line-height:1.8;
 		text-align: left;
+		margin-top:20%;
+	margin-left: 2%;
+	width:30%;
+	font-size: 16px;
+	color: white;
+	line-height: 1.6;
+	text-align: left;
 		
 	}
 	ul>li
@@ -93,13 +96,14 @@
 				
 				
 	<div class="container" >	
+    <div id="whole">
 	<ul>
 		
 	<li><img id="pic"  src="image/composition/4.jpg"  alt=""></li>
 	
 		
 		<li id="des1">
-		<audio src="music/duijiao.mp3" controls="controls" autoplay="autoplay" style="width: 100%;">Your browser does not support the audio element.</audio>
+		<audio src="music/duijiao.mp3" controls autoplay style="width: 100%;">Your browser does not support the audio element.</audio>
 		
 		<h1>对角线构图</h1>
 		<p >对角线构图其实是引导线构图的一类，将画面中的线条沿对角线方向展布，形成了对角线构图。
@@ -127,7 +131,7 @@
 					</a>
 				</nav>
 			</section>
-			
+		</div>
 		</div>
 		
 	</body>
