--- a/yindao.html
+++ b/yindao.html
@@ -20,6 +20,9 @@
 		//background-color: wheat;
 		
 	}
+	#whole{
+			margin: auto;
+		}
 	#pic{
 		width:500px;
 		border-width:10px;
@@ -101,12 +104,13 @@
 <section class="color-1">
 				
 				
-	<div class="container" >	
+	<div class="container" >
+    <div id="whole">	
 	<ul>
 		
 	<li><img id="pic"  src="image/composition/3.jpg"  alt=""></li>
 	<li id="des1">
-	<audio src="music/yindao.mp3" controls="controls" autoplay="autoplay" style="width: 100%;">Your browser does not support the audio element.</audio>
+	<audio src="music/yindao.mp3" controls autoplay style="width: 100%;">Your browser does not support the audio element.</audio>
 	<h1>引导线</h1>
 		<p >简单地说，引导线特征在于线条形状，例如道路或河流，以将观察者的眼睛吸引到照片的预期主体上。每当人们看到一幅图像时，我们的眼睛就会自然地被它内部的线条所吸引。我们本能地按照这些线条来看看它们走向何方-这些线条引领着我们对某个特定主题的注视。</p>
 	</li>
@@ -134,6 +138,7 @@
 					</a>
 				</nav>
 			</section>
+            </div>
 				</div>	
 	</body>
 <!--<script type="text/javascript">
