--- a/html/colourstyle-test.html
+++ b/html/colourstyle-test.html
@@ -1,184 +1,250 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head lang="en">
-<meta charset="UTF-8">
-<title>调色练习</title>
-<link rel="stylesheet" href="../css/colourstyle-test.css">
-<link rel="stylesheet" href="../css/daohang.css">
-<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="../js/Untitled-2-js.js"></script>
-<script type="text/javascript" src="../js/jquery.min.js"></script>
-<script type="text/javascript">
-$(function(){
-	var win=$(".win");
-	var links=$(".title a");
-	var float=$(".float");
-	var divs=$(".box div");
-	var num1=0;  //ǰݵ±
-	var num2=0;
-	win.hover(function(){
-		$(".leftB,.rightB").css("display","block");
-	},function(){
-		$(".leftB,.rightB").css("display","none");
-	});
-	$(".leftB").click(function(){
-		divs.finish();
-		float.stop(true);
-		var temp=num1;
-		num1--;
-		if(num1==-1){
-			num1=4;
-		}
-		divs.eq(num1).css("left",900).animate({left:0});
-		divs.eq(temp).animate({left:-900});
-		links.css("color","#009797");
-		float.animate({left:links.eq(num1).position().left})
-		links.eq(num1).css("color","#fff");
-	});
-	$(".rightB").click(function(){
-		divs.finish();
-		float.stop(true);
-		var temp=num1;
-		num1++;
-		if(num1==5){
-			num1=0;
-		}
-		divs.eq(num1).css("left",-900).animate({left:0});
-		divs.eq(temp).animate({left:900});
-		links.css("color","#009797");
-		float.animate({left:links.eq(num1).position().left})
-		links.eq(num1).css("color","#fff");
-	});
-	links.hover(function(){
-		//
-		divs.finish();
-		float.stop(true);
-		links.css("color","#009797");
-		var that=$(this);
-		var lefts=$(this).position().left;
-		float.animate({left:lefts},function(){
-			that.css("color","#fff");
-		})
-		//
-		//ݱ仯
-		var index=$(this).index(".title a");
-		num2=index;
-		if(num1==num2){
-			return;
-		}else if(num1<num2){
-			divs.eq(num2).css("left",900).animate({left:0});
-			divs.eq(num1).animate({left:-900});
-		}else if(num1>num2){
-			divs.eq(num2).css("left",-900).animate({left:0});
-			divs.eq(num1).animate({left:900});
-		}
-		num1=num2;
-		num2="";
-	},function(){
+    <meta charset="UTF-8">
+    <title>色调练习</title>
 
-	})
-})
-</script>
+    <link rel="stylesheet" type="text/css" href="../css/slide.css" />
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/jquery-kq-nav-left.css">
+    <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
+    <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+
+    <link rel="stylesheet" href="../css/colourstyle-test.css">
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="../js/Untitled-2-js.js"></script>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            var win = $(".win");
+            var links = $(".title a");
+            var float = $(".float");
+            var divs = $(".box div");
+            var num1 = 0;  //ǰݵ±
+            var num2 = 0;
+            win.hover(function () {
+                $(".leftB,.rightB").css("display", "block");
+            }, function () {
+                $(".leftB,.rightB").css("display", "none");
+            });
+            $(".leftB").click(function () {
+                divs.finish();
+                float.stop(true);
+                var temp = num1;
+                num1--;
+                if (num1 == -1) {
+                    num1 = 4;
+                }
+                divs.eq(num1).css("left", 650).animate({ left: 0 });
+                divs.eq(temp).animate({ left: -650 });
+                links.css("color", "#009797");
+                float.animate({ left: links.eq(num1).position().left })
+                links.eq(num1).css("color", "#fff");
+            });
+            $(".rightB").click(function () {
+                divs.finish();
+                float.stop(true);
+                var temp = num1;
+                num1++;
+                if (num1 == 5) {
+                    num1 = 0;
+                }
+                divs.eq(num1).css("left", -650).animate({ left: 0 });
+                divs.eq(temp).animate({ left: 650 });
+                links.css("color", "#000000");
+                float.animate({ left: links.eq(num1).position().left })
+                links.eq(num1).css("color", "#fff");
+            });
+            links.hover(function () {
+                //
+                divs.finish();
+                float.stop(true);
+                links.css("color", "#000000");
+                var that = $(this);
+                var lefts = $(this).position().left;
+                float.animate({ left: lefts }, function () {
+                    that.css("color", "#fff");
+                })
+                //
+                //ݱ仯
+                var index = $(this).index(".title a");
+                num2 = index;
+                if (num1 == num2) {
+                    return;
+                } else if (num1 < num2) {
+                    divs.eq(num2).css("left", 650).animate({ left: 0 });
+                    divs.eq(num1).animate({ left: -650 });
+                } else if (num1 > num2) {
+                    divs.eq(num2).css("left", -650).animate({ left: 0 });
+                    divs.eq(num1).animate({ left: 650 });
+                }
+                num1 = num2;
+                num2 = "";
+            }, function () {
+
+            })
+        })
+    </script>
 </head>
-<body style="overflow:hidden"><script src="/demos/googlegg.js"></script>
+<body style="overflow:hidden">
+    <script src="/demos/googlegg.js"></script>
+    <ul class="nav-left-container">
+        <div id="course_title">Photoshop<br>基本后期调色</div>
+        <li>
+            <a href="index.html">
+                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                <span>首页</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-calendar f12" aria-hidden="true"></span>
+                <span>构图</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
 
-<div class="nav">
-	<div class="link5"><a href="../index.html" style="font-weight: bold;">Ⅰ 首页</a>
-	</div>
-	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅱ 构图</a>
-			<ul>
-			<li><a href="../yindao.html">构图方法</a></li>
-			<li><a href="PS-structure-video.html">裁剪工具</a></li>
-			<li><a href="structure-test.html">构图练习</a></li>
-			</ul>
-	</div>
-	<div class="link2"><a href="colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
-			<ul>
-			<li><a href="colourstyle.html">色调类型</a></li>
-			<li><a href="colourstyle-test.html"><u>调色练习</u></a></li>
-			</ul>
-	</div>
-	
-	<div class="link3"><a href="main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
-			<ul>
-			<li><a href="main-test.html">理论选择题</a></li>
-			<li><a href="../apply.html">综合运用</a></li>
-			</ul>
-	</div>
-	<div class="link4"><a href="../album.html" style="font-weight: bold;">Ⅴ 相册</a>
-	</div>
-</div>
-<div class="container">
-<div class="win">
-	<div class="title">
-		<a href="javascript:;" style="color:#fff">1</a>
-		<a href="javascript:;">2</a>
-		<a href="javascript:;">3</a>
-		<a href="javascript:;">4</a>
-		<a href="javascript:;">5</a>
-		<div class="float"></div>
-	</div>
-	
-	<div class="box">
-		<div class="question1" style="left:0">
-			1.日系调色饱和度应该(<span class="red">B</span> )<br>
-			 <input type="radio" name="a1" value="A" class="a1" id="b1">
-			<span class="span1"> 
-				<label for="b1">A.较高</label>
-			</span><br>
-			 <input type="radio" name="a1" value="B" class="a1"><span class="span1"> B.较低</span><br>
-			 <input type="radio" name="a1" value="C" class="a1"><span class="span1"> C.没有饱和度</span><br>
-			 <input type="radio" name="a1" value="D" class="a1"><span class="span1"> D.以上都不对</span><br>
-		</div>
-		<div class="question2">
-		2.以下哪张照片属于日系摄影风格(<span class="red">C</span> )<br>
-                        <input type="radio" name="a2" value="A" class="a1" id="c1" >
-						<span class="span1" style="padding-right: 30px;"> <label for="c1">A.
-						<img src="../imgs/u=489224569,820417309&fm=26&gp=0.jpg" width="250" height="200" style="padding-top: 20px;padding-bottom: 10px"></label>
-						</span>
-                        <input type="radio" name="a2" value="B" class="a1" id="c2">
-						<span class="span1"> <label for="c2">B.
-						<img src="../imgs/timg (1).jpg"  width="250" height="200" style="padding-top: 20px;padding-bottom: 10px"></label>
-						</span><br>
-                        <input type="radio" name="a2" value="C" class="a1" id="c3">
-						<span class="span1" style="padding-right: 30px;"> <label for="c3">C.
-						<img src="../imgs/捕获5.JPG"  width="250" height="200"></label>
-						</span>
-                        <input type="radio" name="a2" value="D" class="a1" id="c4">
-						<span class="span1"><label for="c4"> D.
-						<img src="../imgs/timg.jpg"  width="250" height="200"></label>
-						</span>
-		</div>
-		<div class="question3">
-		 3.欧美风特点(<span class="red">A</span> )<br>
-           				<input type="radio" name="a3" value="A" class="a1"><span class="span1"> A.有较大对比度</span><br>
-                        <input type="radio" name="a3" value="B" class="a1"><span class="span1"> B.有较小对比度</span><br>
-                        <input type="radio" name="a3" value="C" class="a1"><span class="span1"> C.对比度不明显</span><br>
-                        <input type="radio" name="a3" value="D" class="a1"><span class="span1"> D.以上说法都不正确</span>
-		</div>
-		<div class="question4">
-		 4.日系滤镜高光颜色特点(<span class="red">B</span> )<br>
-                        <input type="radio" name="a4" value="A" class="a1"><span class="span1"> A.偏棕红色</span><br>
-                        <input type="radio" name="a4" value="B" class="a1"><span class="span1"> B.偏青蓝色</span><br>
-                        <input type="radio" name="a4" value="C" class="a1"><span class="span1"> C.偏灰黑色</span><br>
-                        <input type="radio" name="a4" value="D" class="a1"><span class="span1"> D.偏深绿色</span>
-		</div>
-		<div class="question5">
-		5.增加边缘线周边对比度应调整( <span class="red" display="none">C</span>)<br>
-                         <input type="radio" name="a5" value="A" class="a1"><span class="span1"> A.饱和度</span><br>
-                        <input type="radio" name="a5" value="B" class="a1"><span class="span1"> B.温度</span><br>
-                        <input type="radio" name="a5" value="C" class="a1"><span class="span1"> C.锐度</span><br>
-                        <input type="radio" name="a5" value="D" class="a1"><span class="span1"> D.亮度</span>
-		</div>
-	</div>
-	
-	<div class="leftB">&lt;</div>
-	<div class="rightB">&gt;</div>
-	
-</div>
-	<input type="button" class="button button-highlight button-pill button-large" style="width:68px;height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" value="提交" id="submit">
-	<button class="answer" style="height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" >
-				 查看答案</button>
-</div>
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="composition.html">构图方法</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="structure-tool.html">构图工具介绍</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="structure-test.html">构图练习</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-edit f12" aria-hidden="true"></span>
+                <span>调色</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="colourstyle.html">色调类型</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="colourstyle-test.html">调色练习</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-duplicate f12" aria-hidden="true"></span>
+                <span>测试</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="album.html">
+                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                <span>相册</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+        </li>
+    </ul>
+    <script>
+        $('.nav-left-container').on('click', 'li', function () {
+            $(this).find('.glyphicon-menu-right').removeClass('glyphicon-menu-right').addClass('glyphicon-menu-down');
+            $(this).addClass('active').children('.nav-left-container-small').slideDown()
+
+            $(this).siblings().removeClass('active').children('.nav-left-container-small').slideUp()
+            $(this).siblings().find('.glyphicon-menu-down').removeClass('glyphicon-menu-down').addClass('glyphicon-menu-right ');
+        })
+    </script>
+
+    <div class="container">
+        <div class="win">
+            <div class="title">
+                <a href="javascript:;">1</a>
+                <a href="javascript:;">2</a>
+                <a href="javascript:;">3</a>
+                <a href="javascript:;">4</a>
+                <a href="javascript:;">5</a>
+                <div class="float"></div>
+            </div>
+
+            <div class="box">
+                <div class="question1" style="left:0">
+                    1.日系调色饱和度应该(<span class="red">B</span> )<br>
+                    <input type="radio" name="a1" value="A" class="a1" id="b1">
+                    <span class="span1">
+                        <label for="b1">A.较高</label>
+                    </span><br>
+                    <input type="radio" name="a1" value="B" class="a1"><span class="span1"> B.较低</span><br>
+                    <input type="radio" name="a1" value="C" class="a1"><span class="span1"> C.没有饱和度</span><br>
+                    <input type="radio" name="a1" value="D" class="a1"><span class="span1"> D.以上都不对</span><br>
+                </div>
+                <div class="question2">
+                    2.以下哪张照片属于日系摄影风格(<span class="red">C</span> )<br>
+                    <input type="radio" name="a2" value="A" class="a1" id="c1">
+                    <span class="span1" style="padding-right: 30px;">
+                        <label for="c1">
+                            A.
+                            <img src="../imgs/u=489224569,820417309&fm=26&gp=0.jpg" width="250" height="200" style="padding-top: 20px;padding-bottom: 10px">
+                        </label>
+                    </span>
+                    <input type="radio" name="a2" value="B" class="a1" id="c2">
+                    <span class="span1">
+                        <label for="c2">
+                            B.
+                            <img src="../imgs/timg (1).jpg" width="250" height="200" style="padding-top: 20px;padding-bottom: 10px">
+                        </label>
+                    </span><br>
+                    <input type="radio" name="a2" value="C" class="a1" id="c3">
+                    <span class="span1" style="padding-right: 30px;">
+                        <label for="c3">
+                            C.
+                            <img src="../imgs/捕获5.JPG" width="250" height="200">
+                        </label>
+                    </span>
+                    <input type="radio" name="a2" value="D" class="a1" id="c4">
+                    <span class="span1">
+                        <label for="c4">
+                            D.
+                            <img src="../imgs/timg.jpg" width="250" height="200">
+                        </label>
+                    </span>
+                </div>
+                <div class="question3">
+                    3.欧美风特点(<span class="red">A</span> )<br>
+                    <input type="radio" name="a3" value="A" class="a1"><span class="span1"> A.有较大对比度</span><br>
+                    <input type="radio" name="a3" value="B" class="a1"><span class="span1"> B.有较小对比度</span><br>
+                    <input type="radio" name="a3" value="C" class="a1"><span class="span1"> C.对比度不明显</span><br>
+                    <input type="radio" name="a3" value="D" class="a1"><span class="span1"> D.以上说法都不正确</span>
+                </div>
+                <div class="question4">
+                    4.日系滤镜高光颜色特点(<span class="red">B</span> )<br>
+                    <input type="radio" name="a4" value="A" class="a1"><span class="span1"> A.偏棕红色</span><br>
+                    <input type="radio" name="a4" value="B" class="a1"><span class="span1"> B.偏青蓝色</span><br>
+                    <input type="radio" name="a4" value="C" class="a1"><span class="span1"> C.偏灰黑色</span><br>
+                    <input type="radio" name="a4" value="D" class="a1"><span class="span1"> D.偏深绿色</span>
+                </div>
+                <div class="question5">
+                    5.增加边缘线周边对比度应调整( <span class="red" display="none">C</span>)<br>
+                    <input type="radio" name="a5" value="A" class="a1"><span class="span1"> A.饱和度</span><br>
+                    <input type="radio" name="a5" value="B" class="a1"><span class="span1"> B.温度</span><br>
+                    <input type="radio" name="a5" value="C" class="a1"><span class="span1"> C.锐度</span><br>
+                    <input type="radio" name="a5" value="D" class="a1"><span class="span1"> D.亮度</span>
+                </div>
+            </div>
+
+            <div class="leftB">&lt;</div>
+            <div class="rightB">&gt;</div>
+
+        </div>
+        <input type="button" class="button button-highlight button-pill button-large" style="width:90px;height: 36px;color:#000000;font-size: 17px;border: none;font-family: '黑体'" value="提交" id="submit">
+        <button class="answer" style="width:90px;height:36px;color:#000000;font-size: 17px;border: none;font-family: '黑体'">
+            查看答案
+        </button>
+    </div>
 </body>
 </html>
