--- a/html/colourstyle.html
+++ b/html/colourstyle.html
@@ -1,106 +1,150 @@
-<!doctype html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<meta charset="utf-8">
-<title>色调类型</title>
-	<link rel="stylesheet" href="../css/colourstyle.css">
-	<link rel="stylesheet" href="../css/daohang.css">
-	<style type="text/css">
-		#content1{
-			margin-top: 20%;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>色调介绍</title>
+
+    <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/jquery-kq-nav-left.css">
+    <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+	
+	<link rel="stylesheet" href="../css/democss.css">
+	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+	 <script type="text/javascript" src="../js/jquery-1.9.1.js"></script>
+	<style>
+		.two{
+			position: absolute;top: 0;right: 0;width: 55%;overflow: hidden;
 		}
 	</style>
 </head>
-<body>
-<div class="nav">
-	<div class="link5"><a href="../album.html" style="font-weight: bold;">Ⅰ 首页</a>
-	</div>
-	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅱ 构图</a>
-			<ul>
-			<li><a href="../yindao.html">构图方法</a></li>
-			<li><a href="PS-structure-video.html">裁剪工具</a></li>
-			<li><a href="structure-test.html">构图练习</a></li>
-			</ul>
-	</div>
-	<div class="link2"><a href="colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
-			<ul>
-			<li><a href="colourstyle.html"><u>色调类型</u></a></li>
-			<li><a href="colourstyle-test.html">调色练习</a></li>
-			</ul>
-	</div>
-	
-	<div class="link3"><a href="main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
-			<ul>
-			<li><a href="main-test.html">理论选择题</a></li>
-			<li><a href="../apply.html">综合运用</a></li>
-			</ul>
-	</div>
-	<div class="link4"><a href="../album.html" style="font-weight: bold;">Ⅴ 相册</a>
-	</div>
-</div>
-<div class="container">
-	<div class="box">
-		<img src="../imgs/2ed4f08a58bf9f106874f67ea07e2f3.jpg" alt="">
-		<div class="info" >
-			<a href="../japan.html" style="color:aliceblue">
-		<audio src="../music/japan.mp3" controls style="width: 90%; margin-bottom: 20px;">Your browser does not support the audio element.</audio>
-		<h1>日系</h1>
-		<p id="content1"  title="点击文字观看日系调色视频">1.在色彩方面，在调整图层中用饱和度工具降低饱和度。2.调整图层减少对比度，并提高整体亮度，对于过曝或高调区域可下拉曲线，注意是沿着右边输出线下拉。3.选取拍摄内容时，可留心明度高的色彩，组合成画面。4.可以给照片加入淡淡的蓝色或是少许温暖的黄色，洋红色轻微加入也可有种胶片的色彩感觉。</p>
-		<script type="text/javascript">
-				$(".box").on("mouseover",function(){
-                    $(this).children(".info").fadeIn(1000);
-                });
-	</script>
-				</a>		
-			
-		</div>
-		<span class="title">日系</span>
-	</div>
-	
-	<div class="box">
-		<img  src="../imgs/0106025d0e3526a801205e4be95a81.jpg@1280w_1l_2o_100sh.jpg" alt="">
-		<div class="info" >
-		<a href="../hongkong.html" style="color:aliceblue">
-		<audio src="../music/hongkong.mp3" controls style="width: 90%; margin-bottom: 20px;">Your browser does not support the audio element.</audio>
-		<h1>港风</h1>
-		<p id="content2" title="点击文字观看港风调色视频"> 1. 明暗细节丰富（影调）港风胶片照片会保留更多高光和暗部的细节，亮部不曝暗部不暗，具有丰富的层次和更明显的对比，画面更加“精致细腻”。2. 色彩细腻饱满（色调），制造胶片复古氛围，我们常见的色偏出现在绿色偏青色，亮部偏米黄、红色偏橙色等，而这些颜色都给人浓郁复古的感觉。</p>
-<!--<script type="text/javascript">
-var pre = document.getElementById("content2");
-var text = pre.innerText;
-var num = 0;
-function run() {
-    pre.innerText = text.slice(0,num) + (num%2==0?"":"_");
-    if (++num<=text.length)
-        setTimeout(run, 60);
-}
-run();
-</script>-->
-		</a>
-		</div>
-		<span class="title">港风</span>
-	</div>
-	<div class="box">
-		<img  src="../imgs/02.jpg" alt="">
-		<div class="info" >
-			<a href="../europe.html" style="color:aliceblue">
-		<audio src="../music/europe.mp3" controls style="width: 90%; margin-bottom: 20px;">Your browser does not support the audio element.</audio>
-		<h1>欧美风</h1>
-		<p id="content3" title="点击文字观看欧美风调色视频">1.色彩通常比较艳丽，对比度较高，色彩的饱和度通常比较高，给人一种艳丽的感觉，因为色彩是很具有攻击性的。2.亮度较低欧美系摄影的亮度通常比较低，整个画面给人的感觉是略显压抑，充满着一种忧郁的气息。3.欧美系摄影都有那么一点儿胶片的味道，给人一种陈旧的感觉。</p>
-<!--<script type="text/javascript">
-var pre = document.getElementById("content3");
-var text = pre.innerText;
-var num = 0;
-function run() {
-    pre.innerText = text.slice(0,num) + (num%2==0?"":"_");
-    if (++num<=text.length)
-        setTimeout(run, 60);
-}
-run();
-</script>-->
-		</a>
-		</div>
-		<span class="title">欧美风</span>
-	</div>
-</div>
+
+<body style="overflow-x:hidden;overflow-y:hidden;height: 100%;background-color: black">
+    <ul class="nav-left-container">
+        <div id="course_title">Photoshop<br>基本后期调色</div>
+        <li>
+            <a href="index.html">
+                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                <span>首页</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-calendar f12" aria-hidden="true"></span>
+                <span>构图</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="composition.html">构图方法</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="structure-tool.html">构图工具介绍</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="structure-test.html">构图练习</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-edit f12" aria-hidden="true"></span>
+                <span>调色</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="colourstyle.html">色调类型</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="colourstyle-test.html">调色练习</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-duplicate f12" aria-hidden="true"></span>
+                <span>测试</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="album.html">
+                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                <span>相册</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+        </li>
+    </ul>
+    <script>
+        $('.nav-left-container').on('click', 'li', function () {
+            $(this).find('.glyphicon-menu-right').removeClass('glyphicon-menu-right').addClass('glyphicon-menu-down');
+            $(this).addClass('active').children('.nav-left-container-small').slideDown()
+
+            $(this).siblings().removeClass('active').children('.nav-left-container-small').slideUp()
+            $(this).siblings().find('.glyphicon-menu-down').removeClass('glyphicon-menu-down').addClass('glyphicon-menu-right ');
+        })
+    </script>
+
+
+    <div class="container" id="subject">
+        <ul>
+            <li>
+                <a href="hongkong.html" title="点击查看港风调色方法">
+                    <img class="one" src="../imgs/1.jpg" />
+                    <div class="info" style="background-color:#900002;position: absolute;top: 0;right: 0;height: 100%;width: 45%;overflow: hidden;color: #FFFFFF;">
+                        <h1>港风</h1>
+                        <p class="p1">1.明暗细节丰富，港风胶片照片会保留更多高光和暗部细节，具有丰富层次和更明显的对比，画面更加“精致细腻”，而人们往往都更喜欢清晰的，具有更多细节的视觉感。<br />2.色彩细腻饱满，在胶片的制造和冲洗过程中会使颜色发生偏移，即“色偏”，另照片呈现的颜色比肉眼所见更加油润饱满。<br />3.胶片的色彩通常并无特定唯一的风格，我们常见的色偏出现在绿色偏青色，亮部偏米黄、红色偏橙色等，这些颜色都给人浓郁复古的感觉。</p>
+                    </div>
+                </a>
+            </li>
+            <li class="big">
+                <a href="" title="点击查看欧美风调色方法">
+                    <img class="two" src="../imgs/02.jpg" />
+                    <div class="info" style="background-color:#292929; position: absolute;top: 0;left: 0;height: 100%;width: 45%;overflow: hidden;color: #FFFFFF;">
+                        <h1>欧美风</h1>
+                        <p class="p2">1.欧美系的摄影色彩的饱和度通常比较高，对比度较高，画面中的明暗对比比较强烈，亮度较低，给人一种艳丽的感觉。<br />2.欧美风格照片的色彩会有一定的偏向，能够给人较为强烈的视觉冲击，很多欧美风格照片都会通过强烈的色彩倾向去传达自己的主观情感。</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="" title="点击查看日系调色方法">
+                    <img class="three" src="../imgs/3.jpg" />
+                    <div class="info" style="background-color:#48A67E;position: absolute;top: 0;right: 0;height: 100%;width: 45%;overflow: hidden;color: #FFFFFF;">
+                        <h1>日系风</h1>
+                        <p class="p1" title="点击查看日系调色方法">1.在色彩方面，在调整图层中用饱和度工具降低饱和度。用曲线调整图层减少对比度，并提高整体亮度，对于过曝或高调区域可下拉曲线，注意是沿着右边输出线下拉。选取拍摄内容时，可留心明度高的色彩，组合成画面。<br />2.可以给照片加入淡淡的蓝色或是少许温暖的黄色，洋红色轻微加入也可有种胶片的色彩感觉，都可用曲线工具.</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+
+    </div>
+    <script type="text/javascript">
+        function mouseover(e) {
+            var list = $('#subject li');
+            var target = $(e.target).parents('li');
+
+            list.removeClass('big');
+            target.addClass('big');
+        }
+
+        (function () {
+            var outer = $('#subject');
+            outer.find('li').on('mouseover', mouseover);
+        })()
+
+    </script>
+
 </body>
+
 </html>
