--- a/html/composition.html
+++ b/html/composition.html
@@ -2,17 +2,83 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>裁剪工具</title>
-    <link rel="stylesheet" type="text/css" href="../css/slide.css" />
+    <title>构图方法</title>
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/jquery-kq-nav-left.css">
     <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
     <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 
-    <link rel="stylesheet" href="../css/PS-structure-video.css">
+    <style type="text/css">
+        * {
+            padding: 0;
+            margin: 0
+        }
+
+        body {
+            background-image: url(../image/1.jpg);
+        }
+
+        .container { /*最大的div*/
+            width: 820px;
+            height: 100vh;
+            display: flex;
+            margin: auto;
+            box-sizing: border-box;
+            position: relative;
+        }
+
+        .album { /*图片*/
+            float: left;
+            overflow: hidden;
+            transition: width 2s, height 2s;
+            -moz-transition: width 1s, height 1s, -moz-transform 1s; /* Firefox 4 */
+            -webkit-transition: width 1s, height 1s, -webkit-transform 1s; /* Safari and Chrome */
+            -o-transition: width 1s, height 1s, -o-transform 1s; /* Opera */
+        }
+
+        container > a:link {
+            color: black;
+        }
+
+        .album img:hover {
+            border-color: black;
+            position: relative;
+            z-index: 999;
+            /*图片放大*/
+            transform: scale(1.1);
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
+            -o-transform: scale(1.1);
+            -ms-transform: scale(1.1);
+        }
+
+        #over1 {
+            position: absolute;
+            left: 53%;
+            top: 5%;
+            width: 460px;
+            width: 56%;
+        }
+
+        #over2 {
+            position: absolute;
+            left: 42%;
+            top: 39%;
+            width: 245px;
+            width: 30%;
+        }
+
+        #over3 {
+            position: absolute;
+            left: 70%;
+            top: 60%;
+            //height:210px;
+            width: 38%;
+        }
+    </style>
 </head>
 
-<body>
+<body style="overflow-x:hidden;overflow-y:hidden">
     <ul class="nav-left-container">
         <div id="course_title">Photoshop<br>基本后期调色</div>
         <li>
@@ -85,16 +151,26 @@
             $(this).siblings().find('.glyphicon-menu-down').removeClass('glyphicon-menu-down').addClass('glyphicon-menu-right ');
         })
     </script>
+
     <div class="container">
-        <img src="../imgs/step.png" height="80%" width="36%" style="position:absolute;top:10%;left: 10px;" />
-        <div class="vid">
-            <video controls="controls" autoplay="autoplay" style="width:62%;height:80%;position:absolute;top: 0;right: 0;">
-                <source src="../videos/structure.mp4">
-            </video>
-        </div>
-        <div class="switch">
-            <a class="Back" href="structure-tool.html">返回构图界面</a>
-        </div>
+        <ul>
+            <li class="album"><a href="yindao.html"><img border="10" alt="" src="../image/composition/03.jpg" onmouseout="this.src='../image/composition/3.jpg'" onmouseover="this.src='../image/composition/03.jpg" /></a></li>
+            <li class="album">
+                <a href="sanfen.html"><img id="over1" border="10" alt="" src="../image/composition/1.jpg" onmouseout="this.src='../image/composition/1.jpg'" onmouseover="this.src='../image/composition/1.jpg" /></a>
+            </li>
+            <li class="album">
+                <a href="duijiao.html"><img id="over2" border="10" alt="" src="../image/composition/04.jpg" onmouseout="this.src='../image/composition/004.jpg'" onmouseover="this.src='../image/composition/04.jpg" /></a>
+            </li>
+            <li class="album">
+                <a href="duichen.html"><img id="over3" alt="" border="10px" src="../image/composition/02.jpg" onmouseout="this.src='../image/composition/2.jpg'" onmouseover="this.src='../image/composition/02.jpg" /></a>
+            </li>
+        </ul>
     </div>
+    <script>
+        var aa = document.getElementById("aaa");
+        var bb = aa.attributes["href"].value;
+        aa.title = bb;
+    </script>
 </body>
+
 </html>
