--- a/html/main-test.html
+++ b/html/main-test.html
@@ -1,160 +1,221 @@
-<!doctype html>
-<html>
+﻿<!doctype html>
+<html >
 <head>
-<meta charset="utf-8">
-<title>综合理论练习题</title>
-	<link rel="stylesheet" href="../css/main-test.css">
-	<link rel="stylesheet" href="../css/daohang.css">
-	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-	<script language="JavaScript" type="text/javascript" src="../js/Untitled-1-js.js"></script>
-	
-	<style type="text/css">
-		#option1,#option2{
-			margin-left:30%;
-		}
-		.title{
-			margin-left: 20%;
-		}
-	
-	</style>
+    <meta charset="utf-8">
+    <title>综合理论练习题</title>
+    <link rel="stylesheet" type="text/css" href="../css/slide.css" />
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/jquery-kq-nav-left.css">
+    <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
+    <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+
+    <link rel="stylesheet" href="../css/main-test.css">
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="../js/Untitled-1-js.js"></script>
+
 </head>
 
 <body>
-	<div class="nav">
-	<div class="link5"><a href="../album.html" style="font-weight: bold;">Ⅰ 首页</a>
-	</div>
-	<div class="link1"><a href="../composition.html" style="font-weight: bold;">Ⅱ 构图</a>
-			<ul>
-			<li><a href="../yindao.html">构图方法</a></li>
-			<li><a href="PS-structure-video.html">裁剪工具</a></li>
-			<li><a href="structure-test.html">构图练习</a></li>
-			</ul>
-	</div>
-	<div class="link2"><a href="colourstyle.html" style="font-weight: bold;">Ⅲ 调色</a>
-			<ul>
-			<li><a href="colourstyle.html">色调类型</a></li>
-			<li><a href="colourstyle-test.html"><u>调色练习</u></a></li>
-			</ul>
-	</div>
-	
-	<div class="link3"><a href="main-test.html" style="font-weight: bold;">Ⅳ 测试</a>
-			<ul>
-			<li><a href="main-test.html"><u>理论选择题</u></a></li>
-			<li><a href="../apply.html">综合运用</a></li>
-			</ul>
-	</div>
-	<div class="link4"><a href="../album.html" style="font-weight: bold;">Ⅴ 相册</a>
-	</div>
-</div>
-	<div class="container">
-		 <ul class="ul1" name="top">
-			 <h1 align="center" style="color: #000000">综合理论练习题</h1>
-			 <div class="title" style="font-size: 22px;font-weight: bold;color: #000000">单选题</div>
-			 <hr>
-			 <div id="option1">
-                    <li style="margin-top: 10px;">
-                        1.PS中裁剪工具快捷键是(<span class="red">B</span> )<br>
-                        <input type="radio" name="a1" value="A" class="a1"><span class="span1"> A.【M】</span><br>
-                        <input type="radio" name="a1" value="B" class="a1"><span class="span1"> B.【C】</span><br>
-                        <input type="radio" name="a1" value="C" class="a1"><span class="span1"> C.【S】</span><br>
-                        <input type="radio" name="a1" value="D" class="a1"><span class="span1"> D.【X】</span>
-                    </li><br><br>
-                    <li>
-                        2.以下哪个选项是PS中的截图工具(<span class="red">C</span> )<br>
-                        <input type="radio" name="a2" value="A" class="a1" id="a1">
-						<span class="span1"><label for="a1">A.
-						<img src="../imgs/捕获2.JPG" width="80" height="60"></label>
-						</span><br><br>
-                        <input type="radio" name="a2" value="B" class="a1" id="a2">
-						<span class="span1"><label for="a2"> B.
-						<img src="../imgs/捕获.JPG" width="80" height="60"></label>
-						</span><br><br>
-                        <input type="radio" name="a2" value="C" class="a1" id="a3">
-						<span class="span1"><label for="a3"> C.
-						<img src="../imgs/捕获3.JPG" width="80" height="60"></label>
-						</span><br><br>
-                        <input type="radio" name="a2" value="D" class="a1" id="a4">
-						<span class="span1"><label for="a4"> D.
-						<img src="../imgs/捕获4.JPG" width="80" height="60"></label>
-						</span>
-                    </li><br><br>
-					 <li >
-                        3.PS中复制图层的快捷键为(<span class="red">A</span> )<br>
-                        <input type="radio" name="a3" value="A" class="a1"><span class="span1"> A.Ctrl+J</span><br>
-                        <input type="radio" name="a3" value="B" class="a1"><span class="span1"> B.Ctrl+M</span><br>
-                        <input type="radio" name="a3" value="C" class="a1"><span class="span1"> C.Ctrl+S</span><br>
-                        <input type="radio" name="a3" value="D" class="a1"><span class="span1"> D.Ctrl+V</span>
-                    </li><br><br>
-                    <li>
-                        4.港风复古滤镜高光颜色特点(<span class="red">A</span> )<br>
-                       <input type="radio" name="a4" value="A" class="a1"><span class="span1"> A.橙黄色</span><br>
-                        <input type="radio" name="a4" value="B" class="a1"><span class="span1"> B.蓝青色</span><br>
-                        <input type="radio" name="a4" value="C" class="a1"><span class="span1"> C.深红色</span><br>
-                        <input type="radio" name="a4" value="D" class="a1"><span class="span1"> D.灰黑色</span>
-                    </li><br><br>
-                    
-                    <li >
-                        5.PS中调节高光和阴影应该点击哪个图标( <span class="red" display="none">C</span>)<br>
-                        <input type="radio" name="a5" value="A" class="a1" id="b1">
-						<span class="span1"><label for="b1"> A.
-						<img src="../imgs/1.JPG" width="80" height="60"></label>
-						</span><br><br>
-                        <input type="radio" name="a5" value="B" class="a1" id="b2">
-						<span class="span1"><label for="b2"> B.
-						<img src="../imgs/2.JPG" width="80" height="60"></label>
-						</span><br><br>
-                        <input type="radio" name="a5" value="C" class="a1" id="b3">
-						<span class="span1"><label for="b3"> C.
-						<img src="../imgs/3.JPG" width="80" height="60"></label>
-						</span><br><br>
-                        <input type="radio" name="a5" value="D" class="a1" id="b4">
-						<span class="span1"> <label for="b4">D.
-						<img src="../imgs/4.JPG" width="80" height="60"></label>
-						</span>
-                    </li><br><br>
-			 </div>
-			 <div class="title" style="font-size: 22px;font-weight: bold;color: #000000">判断题</div>
-			 <hr>
-			 <div id="option2">
-			 <li style="margin-top: 10px;">
-                        1.欧美风滤镜应注意清晰度和锐度的调整<br>
-                       <input type="radio" name="a6" value="A" class="a1"><span class="span1"> 正确</span><br>
-                        <input type="radio" name="a6" value="B" class="a1"><span class="span1"> 错误</span><br>
-				 		<span class="red">正确</span>    
-                    </li><br><br>
-			 <li>
-                        2.港风复古滤镜阴影颜色特点是偏橙黄色<br>
-                       <input type="radio" name="a7" value="A" class="a1"><span class="span1"> 正确</span><br>
-                        <input type="radio" name="a7" value="B" class="a1"><span class="span1"> 错误</span><br>
-				 		<span class="red">错误 港风复古滤镜阴影颜色特点是深青红色</span>    
-                    </li><br><br>
-			  <li>
-                        3.用PS调色可通过增加颗粒数量来添加暗角<br>
-                       <input type="radio" name="a8" value="A" class="a1"><span class="span1"> 正确</span><br>
-                        <input type="radio" name="a8" value="B" class="a1"><span class="span1"> 错误</span><br>   
-				      <span class="red">正确</span> 
-                    </li><br><br>
-			  <li>
-                        4.三分法构图可将主体放在任意横竖线上<br>
-                       <input type="radio" name="a9" value="A" class="a1"><span class="span1"> 正确</span><br>
-                        <input type="radio" name="a9" value="B" class="a1"><span class="span1"> 错误</span><br>
-				 		<span class="red">错误 三分法构图应将主体放在交叉点上</span>    
-                    </li><br><br>
-			 <li>
-                        5.沿对角线展布的线条可以是直线，也可以是曲线、折线<br>
-                       <input type="radio" name="a10" value="A" class="a1"><span class="span1"> 正确</span><br>
-                        <input type="radio" name="10" value="B" class="a1"><span class="span1"> 错误</span><br>
-				 		<span class="red">正确</span> 
-                    </li><br><br>
-			 </div>
-				<input type="button" class="button button-highlight button-pill button-large" style="width:68px;height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" value="提交" id="submit">
-				<button class="answer" style="height: 36px;color:#000000;font-size: 17px;border: none;font-family: '楷体'" >
-				 查看答案</button>
-              	<a class="practice" href="../apply.html" style="height: 36px;color:#000000;font-size: 20px;border: none;font-family: '楷体'" >
-				 实战演练</a>
-			</ul>
-		
-	</div>	
+    <ul class="nav-left-container">
+        <div id="course_title">Photoshop<br>基本后期调色</div>
+        <li>
+            <a href="index.html">
+                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                <span>首页</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-calendar f12" aria-hidden="true"></span>
+                <span>构图</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="composition.html">构图方法</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="structure-tool.html">构图工具介绍</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="structure-test.html">构图练习</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-edit f12" aria-hidden="true"></span>
+                <span>调色</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="colourstyle.html">色调类型</a>
+                </li>
+                <li>
+                    <a class="J_menuItem" href="colourstyle-test.html">调色练习</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+                <span class="glyphicon glyphicon-duplicate f12" aria-hidden="true"></span>
+                <span>测试</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+            <ul class="nav-left-container-small">
+                <li>
+                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="album.html">
+                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                <span>相册</span>
+                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+            </a>
+        </li>
+    </ul>
+    <script>
+        $('.nav-left-container').on('click', 'li', function () {
+            $(this).find('.glyphicon-menu-right').removeClass('glyphicon-menu-right').addClass('glyphicon-menu-down');
+            $(this).addClass('active').children('.nav-left-container-small').slideDown()
+
+            $(this).siblings().removeClass('active').children('.nav-left-container-small').slideUp()
+            $(this).siblings().find('.glyphicon-menu-down').removeClass('glyphicon-menu-down').addClass('glyphicon-menu-right ');
+        })
+    </script>
+    <div>
+        <ul class="ul1" name="top">
+            <h1 align="center" style="font-size: 50px;">综合理论练习题</h1>
+            <hr style="width: 96%;border:0;height:4px;margin:0 auto;background-color:#2a3245;">
+            <div class="container" id="container">
+                <div style="font-size: 22px;font-weight:bold;width: 100px;height:40px;line-height: 40px;text-align: center;border-radius: 20px;background-color: #c8c7cd;color: #000000">单选题</div>
+                <li style="margin-top: 10px;">
+                    1.PS中裁剪工具快捷键是(<span class="red">B</span> )<br>
+                    <input type="radio" name="a1" value="A" class="a1"><span class="span1"> A.【M】</span><br>
+                    <input type="radio" name="a1" value="B" class="a1"><span class="span1"> B.【C】</span><br>
+                    <input type="radio" name="a1" value="C" class="a1"><span class="span1"> C.【S】</span><br>
+                    <input type="radio" name="a1" value="D" class="a1"><span class="span1"> D.【X】</span>
+                </li><br><br>
+                <li>
+                    2.以下哪个选项是PS中的截图工具(<span class="red">C</span> )<br>
+                    <input type="radio" name="a2" value="A" class="a1" id="a1">
+                    <span class="span1">
+                        <label for="a1">
+                            A.
+                            <img src="../imgs/tubiao/捕获2.JPG" width="80" height="60">
+                        </label>
+                    </span><br><br>
+                    <input type="radio" name="a2" value="B" class="a1" id="a2">
+                    <span class="span1">
+                        <label for="a2">
+                            B.
+                            <img src="../imgs/tubiao/捕获.JPG" width="80" height="60">
+                        </label>
+                    </span><br><br>
+                    <input type="radio" name="a2" value="C" class="a1" id="a3">
+                    <span class="span1">
+                        <label for="a3">
+                            C.
+                            <img src="../imgs/tubiao/捕获3.JPG" width="80" height="60">
+                        </label>
+                    </span><br><br>
+                    <input type="radio" name="a2" value="D" class="a1" id="a4">
+                    <span class="span1">
+                        <label for="a4">
+                            D.
+                            <img src="../imgs/tubiao/捕获4.JPG" width="80" height="60">
+                        </label>
+                    </span>
+                </li><br><br>
+                <li>
+                    3.PS中复制图层的快捷键为(<span class="red">A</span> )<br>
+                    <input type="radio" name="a3" value="A" class="a1"><span class="span1"> A.Ctrl+J</span><br>
+                    <input type="radio" name="a3" value="B" class="a1"><span class="span1"> B.Ctrl+M</span><br>
+                    <input type="radio" name="a3" value="C" class="a1"><span class="span1"> C.Ctrl+S</span><br>
+                    <input type="radio" name="a3" value="D" class="a1"><span class="span1"> D.Ctrl+V</span>
+                </li><br><br>
+                <li>
+                    4.港风复古滤镜高光颜色特点(<span class="red">A</span> )<br>
+                    <input type="radio" name="a4" value="A" class="a1"><span class="span1"> A.橙黄色</span><br>
+                    <input type="radio" name="a4" value="B" class="a1"><span class="span1"> B.蓝青色</span><br>
+                    <input type="radio" name="a4" value="C" class="a1"><span class="span1"> C.深红色</span><br>
+                    <input type="radio" name="a4" value="D" class="a1"><span class="span1"> D.灰黑色</span>
+                </li><br><br>
+
+                <li>
+                    5.PS中调节高光和阴影应该点击哪个图标( <span class="red" display="none">C</span>)<br>
+                    <input type="radio" name="a5" value="A" class="a1" id="b1">
+                    <span class="span1">
+                        <label for="b1">
+                            A.
+                            <img src="../imgs/tubiao/1.JPG" width="80" height="60">
+                        </label>
+                    </span><br><br>
+                    <input type="radio" name="a5" value="B" class="a1" id="b2">
+                    <span class="span1">
+                        <label for="b2">
+                            B.
+                            <img src="../imgs/tubiao/2.JPG" width="80" height="60">
+                        </label>
+                    </span><br><br>
+                    <input type="radio" name="a5" value="C" class="a1" id="b3">
+                    <span class="span1">
+                        <label for="b3">
+                            C.
+                            <img src="../imgs/tubiao/3.JPG" width="80" height="60">
+                        </label>
+                    </span><br><br>
+                    <input type="radio" name="a5" value="D" class="a1" id="b4">
+                    <span class="span1">
+                        <label for="b4">
+                            D.
+                            <img src="../imgs/tubiao/4.JPG" width="80" height="60">
+                        </label>
+                    </span>
+                </li><br><br>
+
+                <div style="font-size: 22px;font-weight:bold;width: 100px;height:40px;line-height: 40px;text-align: center;border-radius: 20px;background-color: #c8c7cd;color: #000000">判断题</div>
+                <li style="margin-top: 10px;">
+                    1.欧美风滤镜应注意清晰度和锐度的调整<br>
+                    <input type="radio" name="a6" value="A" class="a1"><span class="span1"> 正确</span><br>
+                    <input type="radio" name="a6" value="B" class="a1"><span class="span1"> 错误</span><br>
+                    <span class="red">正确</span>
+                </li><br><br>
+                <li>
+                    2.港风复古滤镜阴影颜色特点是偏橙黄色<br>
+                    <input type="radio" name="a7" value="A" class="a1"><span class="span1"> 正确</span><br>
+                    <input type="radio" name="a7" value="B" class="a1"><span class="span1"> 错误</span><br>
+                    <span class="red">错误 港风复古滤镜阴影颜色特点是深青红色</span>
+                </li><br><br>
+                <li>
+                    3.用PS调色可通过增加颗粒数量来添加暗角<br>
+                    <input type="radio" name="a8" value="A" class="a1"><span class="span1"> 正确</span><br>
+                    <input type="radio" name="a8" value="B" class="a1"><span class="span1"> 错误</span><br>
+                    <span class="red">正确</span>
+                </li><br><br>
+                <li>
+                    4.三分法构图可将主体放在任意横竖线上<br>
+                    <input type="radio" name="a9" value="A" class="a1"><span class="span1"> 正确</span><br>
+                    <input type="radio" name="a9" value="B" class="a1"><span class="span1"> 错误</span><br>
+                    <span class="red">错误 三分法构图应将主体放在交叉点上</span>
+                </li><br><br>
+                <li>
+                    5.沿对角线展布的线条可以是直线，也可以是曲线、折线<br>
+                    <input type="radio" name="a10" value="A" class="a1"><span class="span1"> 正确</span><br>
+                    <input type="radio" name="10" value="B" class="a1"><span class="span1"> 错误</span><br>
+                    <span class="red">正确</span>
+                </li><br><br>
+
+                <button class="button button-highlight button-pill button-large" id="submit">提交</button>
+                <button class="answer">查看答案</button>
+            </div>
+        </ul>
+    </div>
 </body>
 </html>
 
